tests/diagnostics/concat_str_number.kal
# `+` mixing a string with a number is a type error.
{ let s: String = "n=" + 5; prints(s); };
